Update GLRender.java